--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Futbol Portal</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer type="module" src="/src/main.jsx"></script>
+  <link rel="shortcut icon" href="./src/assets/faviconbig.webp" type="image/x-icon">
 </head>
 
 <body>
